Added detection of duplicate SNP IDs in the tped file